# backend/api/openapi.yaml
@@ -220,6 +220,31 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/Error' 
+  /login:
+    post:
+      description: Login
+      requestBody:
+        description: Email and password
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/Credentials'
+      responses:
+        200:
+          description: Credentials Correct
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/User'
+        401:
+          description: Invalid email or password
+        default:
+          description: Unexpected Error
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Error'
   /llm:
     get:
       description: Testing for llm
@@ -239,7 +264,6 @@ paths:
 
 components:
   schemas:
-
     setArray:
       type: array
       items:
@@ -371,3 +395,34 @@ components:
 
     keyString:
       type: string
+
+    Credentials:
+      type: object
+      maxProperties: 2
+      properties:
+        email:
+          type: string
+          format: email
+        password:
+          type: string
+      required:
+        - email
+        - password
+
+    User:
+      type: object
+      maxProperties: 2
+      properties:
+        name:
+          type: string
+        accessToken:
+          type: string
+      required:
+        - name
+        - accessToken
+
+  securitySchemes:
+    bearerAuth:
+      type: http
+      scheme: bearer
+      bearerFormat: JWT
