# backend/src/app.js
@@ -8,6 +8,7 @@ const OpenApiValidator = require('express-openapi-validator');
 
 const set = require('./set');
 const card = require('./card');
+const auth = require('./auth');
 
 // Testing
 // const llm = require('./llm');
@@ -34,7 +35,6 @@ app.use(
   }),
 );
 
-// Your Express routes go here
 // CRUD Operations on Sets
 app.put('/v0/set', set.add); // Create
 app.get('/v0/set', set.getAll); // Read
@@ -46,6 +46,9 @@ app.put('/v0/card/:setId', card.add); // Create
 app.get('/v0/card/:setId', card.getAll); // Read
 app.post('/v0/card/:setId', card.update); // Update
 app.delete('/v0/card/:setId', card.delete); // Delete
+
+// Login
+app.post('/v0/login', auth.login);
 
 // Testing
 // app.get('/v0/llm', llm.llm_test);
